--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "dependencies": {
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.0.5",
     "immutable": "^4.0.0-rc.14",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
