--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple todo list",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "build": "webpack --config ./webpack.config.js"
   },
   "dependencies": {
     "@babel/core": "^7.3.3",
